--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@ License: For each use you must have a valid license purchased only from above li
   <meta name="author" content="NobleUI">
   <meta name="keywords" content="nobleui, bootstrap, bootstrap 5, bootstrap5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web">
 
-  <title>{% block title %}My Flask App{% endblock %}</title>
+  <title>MOIST-Security System</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,7 +55,7 @@ License: For each use you must have a valid license purchased only from above li
     <nav class="sidebar">
       <div class="sidebar-header">
         <a href="#" class="sidebar-brand">
-          Noble<span>UI</span>
+          Monitoring <span>UI</span>
         </a>
         <div class="sidebar-toggler">
           <span></span>
@@ -695,7 +695,7 @@ License: For each use you must have a valid license purchased only from above li
 
 <!-- canvas -->
     <video id="video" autoplay></video>
-    <canvas id="canvas" width="200" height="200"></canvas>
+    <!-- <canvas id="canvas" width="200" height="200"></canvas> -->
 
 
 <!--  -->
@@ -732,9 +732,11 @@ License: For each use you must have a valid license purchased only from above li
               <div class="col-md-12 grid-margin">
                 <div class="card rounded">
                   <div class="card-body">
-                    <h6 class="card-title">Latest Captured</h6>
+                    <h6 class="card-title">On Focus</h6>
                     <div class="row ms-0 me-0">
-                      <img src="assets/images/mic.jpg">
+                      <!-- <img id="latest_captured" src="assets/images/mic.jpg"> -->
+                      <canvas id="canvas" width="200" height="200"></canvas>
+
                     </div>
                   </div>
                 </div>
